изменила kds на kids

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <h3>30% off</h3>
                     <p>for women</p>
                 </li>
-                <li class="offers__item offers__item--kds">
+                <li class="offers__item offers__item--kids">
                     <h3>30% off</h3>
                     <p>for women</p>
                 </li>
