--- a/catalog.html
+++ b/catalog.html
@@ -89,45 +89,69 @@
         </nav>
     </header>
     <main>
-        <section class="brand">
-            <img src="./img/man.png" alt="man" width="800" height="765">
-            <div class="brand__title-wrapper">
-                <h1 class="brand__title">the brand <span class="brand__subtitle">of luxerious <span
-                            class="brand__subtitle-pink">fashion</span></span></h1>
+        <section class="new-arrivals">
+            <div class="new-arrivals container">
+                <a class="new-arrivals__link--title" href="#">new arrivals</a>
+            <ul class="new-arrivals__list">
+                <li><a class="new-arrivals__link" href="#">home</a></li>
+                <li><a class="new-arrivals__link" href="#">men</a></li>
+                <li>new arrivals</li>
+            </ul>
             </div>
         </section>
-        <section class="offers container">
-            <h2 class="visually-hidden">Offers</h2>
-            <ul class="offers__list">
-                <li class="offers__item offers__item--woman">
-                    <div class="offer__title-wrapper">
-                        <h3 class="offer__title">30% off</h3>
-                        <p class="offer__paragraph">for women</p>
-                    </div>
-                </li>
-                <li class="offers__item offers__item--man">
-                    <div class="offer__title-wrapper">
-                        <h3 class="offer__title">hot deal</h3>
-                        <p class="offer__paragraph">for men</p>
-                    </div>
-                </li>
-                <li class="offers__item offers__item--kids">
-                    <div class="offer__title-wrapper">
-                        <h3 class="offer__title">new arrivals</h3>
-                        <p class="offer__paragraph">for kids</p>
-                    </div>
-                </li>
-                <li class="offers__item offers__item--accesories">
-                    <div class="offer__title-wrapper">
-                        <h3 class="offer__title">LUXIROUS & TRENDY</h3>
-                        <p class="offer__paragraph">ACCESORIES</p>
-                    </div>
-                </li>
-            </ul>
-        </section>
         <section class="products container">
-            <h2 class="products__title">Featured Items</h2>
-            <p class="products__paragraph">Shop for items based on what we featured in this week</p>
+            <nav class="filter-wrapper">
+                <div class="filter-wrapper__box">
+                    <a class="filter-wrapper__link" href="#">filter</a>
+                    <a class="filter-wrapper__box--link" href="#"><img src="img/filter-image.svg" alt="filter"></a>
+                    <nav class="products__navigation">
+                        <ul>
+                            <li>
+                                <h2>category</h2>
+                                <ul>
+                                    <li><a href="#">Accesories</a></li>
+                                    <li><a href="#">Bags</a></li>
+                                    <li><a href="#">Denim</a></li>
+                                    <li><a href="#">Hoodies & Sweatshirts</a></li>
+                                    <li><a href="#">Jacets & Coats</a></li>
+                                    <li><a href="#">Polos</a></li>
+                                    <li><a href="#">Shirts</a></li>
+                                    <li><a href="#">Shoes</a></li>
+                                    <li><a href="#">Polos</a></li>
+                                    <li><a href="#">Sweaters & Knits</a></li>
+                                    <li><a href="#">T-shirts</a></li>
+                                    <li><a href="#">Tanks</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h2>brand</h2>
+                                <ul>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h2>designer</h2>
+                                <ul>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                    <li><a href="#">link</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                
+                
+                <ul class="filter__list">
+                    <li><a href="#">trending now</a></li>
+                    <li><a href="#">size</a></li>
+                    <li><a href="#">price</a></li>
+                </ul>
+            </nav>
             <div class="products__list">
                 <ul class="products__list--cardbox">
                     <li class="products__list--card">
@@ -142,7 +166,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-2.jpg" alt="product-2" width="360" height="420">
+                        <img class="products__list--image" src="./img/card-7.jpg" alt="product-2" width="360" height="420">
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -175,7 +199,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-5.jpg" alt="product-5" width="360" height="420">
+                        <img class="products__list--image" src="./img/card-8.jpg" alt="product-5" width="360" height="420">
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -186,7 +210,40 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-6.jpg" alt="product-6" width="360" height="420">
+                        <img class="products__list--image" src="./img/card-9.jpg" alt="product-6" width="360" height="420">
+                        <div class="products__list--information">
+                            <h3 class="products__list--title">ellery x m'o capsule</h3>
+                            <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
+                            Australian arbiter of cool Kym
+                            Ellery
+                            teams up with Moda Operandi.</p>
+                            <p class="products__list--priсe">$52.00</p>
+                        </div>
+                    </li>
+                    <li class="products__list--card">
+                        <img class="products__list--image" src="img/card-10.jpg" alt="product-10" width="360" height="420">
+                        <div class="products__list--information">
+                            <h3 class="products__list--title">ellery x m'o capsule</h3>
+                            <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
+                            Australian arbiter of cool Kym
+                            Ellery
+                            teams up with Moda Operandi.</p>
+                            <p class="products__list--priсe">$52.00</p>
+                        </div>
+                    </li>
+                    <li class="products__list--card">
+                        <img class="products__list--image" src="./img/card-11.jpg" alt="product-11" width="360" height="420">
+                        <div class="products__list--information">
+                            <h3 class="products__list--title">ellery x m'o capsule</h3>
+                            <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
+                            Australian arbiter of cool Kym
+                            Ellery
+                            teams up with Moda Operandi.</p>
+                            <p class="products__list--priсe">$52.00</p>
+                        </div>
+                    </li>
+                    <li class="products__list--card">
+                        <img class="products__list--image" src="./img/card-12.jpg" alt="product-12" width="360" height="420">
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -198,7 +255,20 @@
                     </li>
                 </ul>
             </div>
-            <button class="button">Browse All Product</button>
+            <div class="item-list">
+                <ul class="pager">
+                    <li class="pager-previous"><a href="#" title="На предыдущую страницу">‹</a></li>
+                    <li class="pager-current first"><span>1</span></li>
+                    <li class="pager-item"><a href="#" title="На страницу номер 2">2</a></li>
+                    <li class="pager-item"><a href="#" title="На страницу номер 3">3</a></li>
+                    <li class="pager-item"><a href="#" title="На страницу номер 4">4</a></li>
+                    <li class="pager-item"><a href="#" title="На страницу номер 5">5</a></li>
+                    <li class="pager-item"><a href="#" title="На страницу номер 6">6</a></li>
+                    <li class="pager-item"><a href="#" title="На другие страницы">...</a></li>
+                    <li class="pager-item"><a href="#" title="На последнюю страницу">20</a></li>
+                    <li class="pager-next last"><a href="#" title="На следующую страницу">›</a></li>
+                </ul>
+            </div>
         </section>
         <section class="advantages">
             <div class="container">
