сделала страницу товара каталога

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </li>
                 </ul>
             </div>
-            <button class="button">Browse All Product</button>
+            <button class="button products__button">Browse All Product</button>
         </section>
         <section class="advantages">
             <div class="container">
