--- a/catalog.html
+++ b/catalog.html
@@ -145,7 +145,6 @@
                     </nav>
                 </div>
                 
-                
                 <ul class="filter__list">
                     <li><a href="#">trending now</a></li>
                     <li><a href="#"><img src="img/arrow.svg" alt=""></a></li>
@@ -158,7 +157,7 @@
             <div class="products__list">
                 <ul class="products__list--cardbox">
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -169,7 +168,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-7.jpg" alt="product-2" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-7.jpg" alt="product-2" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -180,7 +179,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -191,7 +190,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -202,7 +201,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-8.jpg" alt="product-5" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-8.jpg" alt="product-5" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -213,7 +212,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-9.jpg" alt="product-6" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-9.jpg" alt="product-6" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -224,7 +223,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-10.jpg" alt="product-10" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-10.jpg" alt="product-10" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -235,7 +234,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-11.jpg" alt="product-11" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-11.jpg" alt="product-11" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -246,7 +245,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-12.jpg" alt="product-12" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-12.jpg" alt="product-12" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
