сделала ссылки на товар каталога с index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <div class="products__list">
                 <ul class="products__list--cardbox">
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -142,7 +142,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-2.jpg" alt="product-2" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-2.jpg" alt="product-2" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -153,7 +153,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -164,7 +164,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -175,7 +175,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-5.jpg" alt="product-5" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-5.jpg" alt="product-5" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -186,7 +186,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-6.jpg" alt="product-6" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-6.jpg" alt="product-6" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
