--- a/product.html
+++ b/product.html
@@ -128,7 +128,18 @@
             <div class="products__list">
                 <ul class="products__list--cardbox">
                     <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420">
+                            <div class="products__list--information"></a>
+                            <h3 class="products__list--title">ellery x m'o capsule</h3>
+                            <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
+                            Australian arbiter of cool Kym
+                            Ellery
+                            teams up with Moda Operandi.</p>
+                            <p class="products__list--priсe">$52.00</p>
+                        </div>
+                    </li>
+                    <li class="products__list--card">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -139,19 +150,8 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420">
-                        <div class="products__list--information">
-                            <h3 class="products__list--title">ellery x m'o capsule</h3>
-                            <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
-                            Australian arbiter of cool Kym
-                            Ellery
-                            teams up with Moda Operandi.</p>
-                            <p class="products__list--priсe">$52.00</p>
-                        </div>
-                    </li>
-                    <li class="products__list--card">
-                        <img class="products__list--image" src="./img/card-6.jpg" alt="product-6" width="360" height="420">
-                        <div class="products__list--information">
+                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-6.jpg" alt="product-6" width="360" height="420">
+                            <div class="products__list--information"></a>
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
                             Australian arbiter of cool Kym
