--- a/registration.html
+++ b/registration.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/3c77485798.js" crossorigin="anonymous"></script>
+</head>
     <title>Document</title>
 </head>
 
