--- a/catalog.html
+++ b/catalog.html
@@ -189,7 +189,7 @@
             <div class="products__list">
                 <ul class="products__list--cardbox">
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420"></a>
+                        <a class="products__list--link products__link" href="product.html"><img class="products__list--image" src="img/card-1.jpg" alt="product-1" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -200,7 +200,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-7.jpg" alt="product-2" width="360" height="420"></a>
+                        <a class="products__list--link products__link" href="product.html"><img class="products__list--image" src="./img/card-7.jpg" alt="product-2" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -211,7 +211,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420"></a>
+                        <a class="products__list--link products__link" href="product.html"><img class="products__list--image" src="./img/card-3.jpg" alt="product-3" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -222,7 +222,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420"></a>
+                        <a class="products__list--link product__link" href="product.html"><img class="products__list--image" src="img/card-4.jpg" alt="product-4" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -233,7 +233,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-8.jpg" alt="product-5" width="360" height="420"></a>
+                        <a class="products__list--link product__link" href="product.html"><img class="products__list--image" src="./img/card-8.jpg" alt="product-5" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -244,7 +244,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-9.jpg" alt="product-6" width="360" height="420"></a>
+                        <a class="products__list--link product__link" href="product.html"><img class="products__list--image" src="./img/card-9.jpg" alt="product-6" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -254,7 +254,7 @@
                             <p class="products__list--priсe">$52.00</p>
                         </div>
                     </li>
-                    <li class="products__list--card">
+                    <li class="products__list--card link__transition">
                         <a class="products__list--link" href="product.html"><img class="products__list--image" src="img/card-10.jpg" alt="product-10" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
@@ -266,7 +266,7 @@
                         </div>
                     </li>
                     <li class="products__list--card">
-                        <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-11.jpg" alt="product-11" width="360" height="420"></a>
+                        <a class="products__list--link link__transition" href="product.html"><img class="products__list--image" src="./img/card-11.jpg" alt="product-11" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
                             <p class="products__list--paragraph">Known for her sculptural takes on traditional tailoring,
@@ -276,7 +276,7 @@
                             <p class="products__list--priсe">$52.00</p>
                         </div>
                     </li>
-                    <li class="products__list--card">
+                    <li class="products__list--card link__transition">
                         <a class="products__list--link" href="product.html"><img class="products__list--image" src="./img/card-12.jpg" alt="product-12" width="360" height="420"></a>
                         <div class="products__list--information">
                             <h3 class="products__list--title">ellery x m'o capsule</h3>
