верстка скрытого меню

--- a/index.html
+++ b/index.html
@@ -66,38 +66,7 @@
                 </div>
             </div>
         </div>
-        <nav class="header__navigation">
-            menu
-            <ul>
-                <li>
-                    <h2>man</h2>
-                    <ul>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>woman</h2>
-                    <ul>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <h2>kids</h2>
-                    <ul>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                        <li><a href="#">link</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </nav>
+        
     </header>
     <main>
         <section class="brand">
@@ -110,6 +79,42 @@
                 <h1 class="brand__title">the brand <span class="brand__subtitle">of luxerious <span
                             class="brand__subtitle-pink">fashion</span></span></h1>
             </div>
+            <nav class="header__navigation">
+                <div class="item item-1">
+                    <h3 class="item__title">MENU</h3>
+                      <summary class="details__title">MAN</summary>
+                      <div class="details-prop">
+                       <ul>
+                         <a href="#"><li>Accessories</li></a>
+                         <a href="#"><li>Bags</li></a>
+                         <a href="#"><li>Denim</li></a>
+                         <a href="#"><li>T-Shirts</li></a>
+                       </ul>
+                      </div>
+                      <summary class="details__title">WOMAN</summary>
+                      <div class="details-prop">
+                       <ul>
+                         <a href="#"><li>Accessories</li></a>
+                         <a href="#"><li>Bags</li></a>
+                         <a href="#"><li>Denim</li></a>
+                         <a href="#"><li>T-Shirts</li></a>
+                         <a href="#"><li>Shirts</li></a>
+                       </ul>
+                      </div>
+                      <summary class="details__title">KIDS</summary>
+                      <div class="details-prop">
+                       <ul>
+                         <a href="#"><li>Accessories</li></a>
+                         <a href="#"><li>Jackets & Coats</li></a>
+                         <a href="#"><li>Polos</li></a>
+                         <a href="#"><li>T-Shirts</li></a>
+                         <a href="#"><li>Shirts</li></a>
+                         <a href="#"><li>Bags</li></a>
+                       </ul>
+                      </div>
+                    <button class="cart__cross item__cross"><i class="fas fa-times"></i></button>
+                  </div>
+            </nav>
         </section>
         <section class="offers container">
             <h2 class="visually-hidden">Offers</h2>
